Set pointer-events:none on highlight overlays
This prevents the highlight overlays from blocking clicks on
search results

--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -60,6 +60,7 @@
 	border-color: black;
 	background:transparent; /* fallback for browsers not supporting rgba */
 	background: rgba(255, 0, 0, 0.4);
+    pointer-events: none;
     }
     </style>
     {% endblock head_content %}
