Refactor search word matching into a single place
This avoids having to maintain 3 copies of this code, 
although there's still considerable room for cleaning it up.

--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -164,6 +164,7 @@
 	 data-navigation_url="{% url 'chronam_search_pages_navigation' %}?"
 	 ></div>
 
+    <script src="{% static 'js/search.js' %}"></script>
     <script src="{% static 'js/page.js' %}"></script>
 
     <noscript><!-- without javascript the pageviewer does not work; display OCR in this case instead. -->
