--- a/core/templates/search_pages_results.html
+++ b/core/templates/search_pages_results.html
@@ -55,5 +55,6 @@
 
 {% block javascript %}
     {{ block.super }}
+    <script src="{% static 'js/search.js' %}"></script>
     <script src="{% static 'js/highlight.js' %}"></script>
 {% endblock %}
