--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -5,6 +5,7 @@
 {{ block.super }}
     <script type="text/javascript" src="{% static 'js/openseadragon.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script>
+    <script src="{% static 'js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
     <div id="page_data"
