--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -122,9 +122,15 @@
 
 {% block javascript %}
 
-{% if RAVEN_PUBLIC_DSN %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raven.js/3.26.1/raven.min.js" integrity="sha256-N3YzTdAC27tvNKpIM2rly/WvlJf8YAat0NjPXgh5Bw4=" crossorigin="anonymous"></script>
-    <script>Raven.config('{{ RAVEN_PUBLIC_DSN }}').install()</script>
+{% if SENTRY_PUBLIC_DSN %}
+    <script src="https://browser.sentry-cdn.com/5.0.8/bundle.min.js" integrity="sha384-PKOJCSVL6suo2Qz9Hs4hkrZqX7S6iLwadxXxBEa0h0ycsuoDNZCiAcHlPGHYxU6l" crossorigin="anonymous"></script>
+    <script>
+        Sentry.init({
+            'dsn': '{{ SENTRY_PUBLIC_DSN }}',
+            'release': '{{ RELEASE }}',
+            'environment': '{{ ENVIRONMENT }}'
+        });
+    </script>
 {% endif %}
 
 {{ block.super }}
