--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -56,6 +56,9 @@ If you are interested in automated access to this data you may want to use the
 Please note: Some batches contain digitized newspaper pages that lack corresponding OCR text.  For this reason, after decompressing the downloadable files, the number of ocr.txt files may not match the page count available within the HTML, Atom and JSON batch views.
 </p>
 
+
+<p>Update: OCR Bulk Data download files previously available from this page (prior to 6/3/19) are temporarily unavailable while they are being re-generated. Newly generated files appear below and are marked with date stamps after 6/3/19.  Please see <a href="https://chroniclingamerica.loc.gov/about/api/">https://chroniclingamerica.loc.gov/about/api/</a> for information on other ways to harvest OCR files from this site using the API. OCR files for all newspaper pages currently ingested in Chronicling America are also available for machine-readable access at <a href="https://chroniclingamerica.loc.gov/data/batches/">https://chroniclingamerica.loc.gov/data/batches/</a>. Contact <a href="mailto:ndnptech@loc.gov">ndnptech@loc.gov</a> with any questions.</p>
+
 <p>
 </p>
 
