Update API page with note about bulk OCR status

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -360,6 +360,8 @@ Please note: Some batches contain digitized newspaper pages that lack correspond
 </p>
 <p class="backtotop"><a href="#skip_menu">Top</a></p>
 
+<p>Update: OCR Bulk Data download files previously available from the <a href="{% url 'chronam_ocr' %}">OCR</a> report (prior to 6/3/19) are temporarily unavailable while they are being re-generated. Newly generated files will appear marked with date stamps after 6/3/19. OCR files for all newspaper pages currently ingested in Chronicling America are also available for machine-readable access at <a href="https://chroniclingamerica.loc.gov/data/batches/">https://chroniclingamerica.loc.gov/data/batches/</a>. Contact <a href="mailto:ndnptech@loc.gov">ndnptech@loc.gov</a> with any questions.</p>
+
 <a name="cors_jsonp"></a>
 <h3>CORS and JSONP Support</h3>
 <p>
