More prominent update about regenerated OCR dumps

--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -57,7 +57,9 @@ Please note: Some batches contain digitized newspaper pages that lack correspond
 </p>
 
 
-<p>Update: OCR Bulk Data download files previously available from this page (prior to 6/3/19) are temporarily unavailable while they are being re-generated. Newly generated files appear below and are marked with date stamps after 6/3/19.  Please see <a href="https://chroniclingamerica.loc.gov/about/api/">https://chroniclingamerica.loc.gov/about/api/</a> for information on other ways to harvest OCR files from this site using the API. OCR files for all newspaper pages currently ingested in Chronicling America are also available for machine-readable access at <a href="https://chroniclingamerica.loc.gov/data/batches/">https://chroniclingamerica.loc.gov/data/batches/</a>. Contact <a href="mailto:ndnptech@loc.gov">ndnptech@loc.gov</a> with any questions.</p>
+<p>
+    <b>Update:</b> OCR Bulk Data download files previously available from this page (prior to 6/3/19) are temporarily unavailable while they are being re-generated. Newly generated files appear below and are marked with date stamps after 6/3/19.  Please see <a href="https://chroniclingamerica.loc.gov/about/api/">https://chroniclingamerica.loc.gov/about/api/</a> for information on other ways to harvest OCR files from this site using the API. OCR files for all newspaper pages currently ingested in Chronicling America are also available for machine-readable access at <a href="https://chroniclingamerica.loc.gov/data/batches/">https://chroniclingamerica.loc.gov/data/batches/</a>. Contact <a href="mailto:ndnptech@loc.gov">ndnptech@loc.gov</a> with any questions.
+</p>
 
 <p>
 </p>
