Start serving thumbnails from IIIF
This allows configuring the use of a IIIF server and using that for the homepage thumbnails instead of the legacy image path.

--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -40,8 +40,14 @@ function setupCarousel() {
         shuffle(results);
         var carousel = $('#mycarousel');
         for (var i=0; i < results.length; i++) {
-          var img = results[i];
-          carousel.append($('<li><a href="' + img.url + '"><img class="thumbnail" src="' + img.thumbnail_url + '" width="200" height="286" alt="" /></a><br /><span><a href="' + img.url + '"><strong>' + img.label + '</strong> (' + img.pages + 'pp.)</a><br />' + img.place_of_publication + '</span></li>'));
+            var img = results[i];
+            var thumbnail_url = img.thumbnail_url;
+
+            if (img.iiif_thumbnail_base_url) {
+                thumbnail_url = img.iiif_thumbnail_base_url + '/full/!200,286/0/default.jpg';
+            }
+
+          carousel.append($('<li><a href="' + img.url + '"><img class="thumbnail" src="' + thumbnail_url + '" width="200" height="286" alt="" /></a><br /><span><a href="' + img.url + '"><strong>' + img.label + '</strong> (' + img.pages + 'pp.)</a><br />' + img.place_of_publication + '</span></li>'));
         }
         carousel.jcarousel();
     });
