--- a/loc/templates/search_pages_results.html
+++ b/loc/templates/search_pages_results.html
@@ -92,96 +92,96 @@ if ($.browser.msie && $.browser.version < 7) {
     $(document).ready(initHighlights);
 }
 </script>
-{% endblock %}
+{% endblock javascript %}
 
 {% block page_head_container %}{% endblock %}
 
 {% block subcontent %}
-
-{% ifequal paginator.count 0 %}
-
-<p style="padding-top:50px; font-size:15px">
-    <span style="color:#900">0 Results</span> were found for the search
-    {% for part in english_search %}
-        <strong>&ldquo;{{ part }}&rdquo;</strong>
-        {% if not forloop.last %}<em>and</em>{% endif %}
-    {% endfor %}
-</p>
-{% else %}
-<div class="search_results_ctrl top fix-float">
-    {% include 'includes/results_ctrl.html' %}
-</div><!-- end class:search_results_ctrl -->
-
-<div class="search_results_body {{ view_type }}">
-    <div class="results_nav">
-        <p class="term">{{ paginator.count }} results
-        {% if english_search %}containing{% endif %}
-        {% for part in english_search %}
-        <strong>&ldquo;{{ part }}&rdquo;</strong>
-        {% if not forloop.last %}<em>and</em>{% endif %}
-        {% endfor %}
-
-        </p>
-        <form id="results">
-            <p>
-            <input class="check" name="check_front" id="check_front" value=1 type="checkbox" />
-            <label class="norm" for="check_front">Show only front pages</label> &nbsp;&nbsp;
-
-            <label class="norm" for="sort_select">Sort by:</label>
-            <select class="sel" name="sort_select" id="sort_select">
-                <option value="relevance">Relevance</option>
-                <option value="state">State</option>
-                <option value="title">Title</option>
-                <option value="date">Date</option>
-            </select> &nbsp;  &nbsp;
-            <label class="norm" for="rpp_select">Results per page:</label>
-            <select class="sel" name="rpp_select" id="rpp_select">
-                <option value="20">20</option>
-                <option value="50">50</option>
-            </select>
-            </p>
-        </form>
-    </div>
-    {% block search_results_box %}
-    <table class="search_results" cellspacing="0" summary="">
-        <tr>
-            {% for object in page.object_list %}
-            <td>
-            {% if object %}
-                <div class="highlite">
-                    <a href="{{ object.highlight_url }}">
-                    {% if object.jp2_filename %}
-                    <img class="thumbnail" src="{{ object.thumb_url }}" />
-                    {% else %}
-                     No Image
-                    {% endif %}
-                    </a><br />
-		    {% with object.issue.title as title %}
-                    <a href="{{ object.highlight_url }}">{{title.display_name}} ({{title.place_of_publication}}), {{object.issue|label}}, {{object|label}}</a>
-		    {% endwith %}
-
-                    {% comment %}The following two hidden input fields are used by the add_highlights javascript{% endcomment %}
-                    <input name="id" value="{{object.url}}" type="hidden"/>
-                    <input name="words" value="{{object.words|join:' '}}" type="hidden"/>
-                </div>
-            {% endif %}
-            </td>
-            {% if forloop.counter|divisibleby:4 and not forloop.last %}
-            </tr><tr>
-            {% endif %}
+    {% ifequal paginator.count 0 %}
+        <p style="padding-top:50px; font-size:15px">
+            <span style="color:#900">0 Results</span> were found for the search
+            {% for part in english_search %}
+                <strong>&ldquo;{{ part }}&rdquo;</strong>
+                {% if not forloop.last %}<em>and</em>{% endif %}
             {% endfor %}
-        </tr>
-    </table>
-    <div class="txt_wrapper">
-    	<p class="backtotop gallery"><a href="#skip_menu">Top</a></p>
-    </div>
+        </p>
+    {% else %}
+        <div class="search_results_ctrl top fix-float">
+            {% include 'includes/results_ctrl.html' %}
+        </div>
 
-{% endblock %}
-</div><!-- end class:search_results_body -->
+        <div class="search_results_body {{ view_type }}">
+            <div class="results_nav">
+                <p class="term">{{ paginator.count }} results
+                {% if english_search %}containing{% endif %}
+                {% for part in english_search %}
+                    <strong>&ldquo;{{ part }}&rdquo;</strong>
+                    {% if not forloop.last %}<em>and</em>{% endif %}
+                {% endfor %}
 
-<div class="search_results_ctrl bot fix-float">
-    {% include 'includes/results_ctrl.html' %}
-</div><!-- end class:search_results_ctrl -->
-{% endifequal %}
-{% endblock %}
+                </p>
+                <form id="results">
+                    <p>
+                        <input class="check" name="check_front" id="check_front" value=1 type="checkbox" />
+                        <label class="norm" for="check_front">Show only front pages</label> &nbsp;&nbsp;
 
+                        <label class="norm" for="sort_select">Sort by:</label>
+                        <select class="sel" name="sort_select" id="sort_select">
+                            <option value="relevance">Relevance</option>
+                            <option value="state">State</option>
+                            <option value="title">Title</option>
+                            <option value="date">Date</option>
+                        </select> &nbsp;  &nbsp;
+                        <label class="norm" for="rpp_select">Results per page:</label>
+                        <select class="sel" name="rpp_select" id="rpp_select">
+                            <option value="20">20</option>
+                            <option value="50">50</option>
+                        </select>
+                    </p>
+                </form>
+            </div>
+            {% block search_results_box %}
+                <table class="search_results" cellspacing="0" summary="">
+                    <tr>
+                        {% for object in page.object_list %}
+                            <td>
+                                {% if object %}
+                                    <div class="highlite">
+                                        <a href="{{ object.highlight_url }}">
+                                        {% if object.jp2_filename %}
+                                            <img class="thumbnail" src="{{ object.thumb_url }}" />
+                                        {% else %}
+                                            No Image
+                                        {% endif %}
+                                        </a>
+                                        <br />
+
+                                        {% with object.issue.title as title %}
+                                                <a href="{{ object.highlight_url }}">{{title.display_name}} ({{title.place_of_publication}}), {{object.issue|label}}, {{object|label}}</a>
+                                        {% endwith %}
+
+                                        {% comment %}The following two hidden input fields are used by the add_highlights javascript{% endcomment %}
+                                        <input name="id" value="{{object.url}}" type="hidden"/>
+                                        <input name="words" value="{{object.words|join:' '}}" type="hidden"/>
+                                    </div>
+                                {% endif %}
+                            </td>
+                            {% if forloop.counter|divisibleby:4 and not forloop.last %}
+                                </tr>
+                                <tr>
+                            {% endif %}
+                        {% endfor %}
+                    </tr>
+                </table>
+                <div class="txt_wrapper">
+                    <p class="backtotop gallery"><a href="#skip_menu">Top</a></p>
+                </div>
+
+            {% endblock %}
+        </div>
+
+        <div class="search_results_ctrl bot fix-float">
+            {% include 'includes/results_ctrl.html' %}
+        </div>
+    {% endifequal %}
+{% endblock subcontent%}
