--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -9,9 +9,9 @@
     <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
     <div id="page_data"
-	 data-static_url="{% static '' %}images/",
-	 data-width="{{page.jp2_width}}"
-	 data-height="{{page.jp2_length}}"
+	 data-static_url="{% static '' %}images/"
+	 data-width="{{ page.jp2_width }}"
+	 data-height="{{ page.jp2_length }}"
 	 data-page_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
 	 data-tile_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
 	 data-coordinates_url="{% url 'chronam_page_coordinates' page.issue.title.lccn page.issue.date_issued page.issue.edition page.sequence %}"
