Quick-and-dirty switch to IIIF for Seadragon tiles
We really should upgrade to a non-ancient version of OpenSeadragon, which will incorporate native IIIF support, but before doing so this change allows us to start testing tile-server performance.

--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -14,6 +14,7 @@
 	 data-height="{{ page.jp2_length }}"
 	 data-page_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
 	 data-tile_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
+     data-iiif-url="{{ page.iiif_base_url|default_if_none:"" }}"
 	 data-coordinates_url="{% url 'chronam_page_coordinates' page.issue.title.lccn page.issue.date_issued page.issue.edition page.sequence %}"
 	 data-navigation_url="{% url 'chronam_search_pages_navigation' %}?"
 	 ></div>
