--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -74,7 +74,9 @@ function shuffle(myArray) {
 {% block subcontent %}
   <div class="carousel-body">
     <div class="carousel-menu">
-        <a id="hundredYears" href='{% url 'chronam_search_pages_results' %}?dateFilterType=range&date1={{date|date:"m/d/Y" }}&date2={{date|date:"m/d/Y"}}/'><strong>100 Years Ago Today</strong>: </a>
+        <a id="hundredYears" href="{% url 'chronam_search_pages_results' %}?dateFilterType=range&amp;date1={{ date|date:"m/d/Y" }}&amp;date2={{ date|date:"m/d/Y" }}">
+            <strong>100 Years Ago Today</strong>:
+        </a>
     </div>
     <ul id="mycarousel" class="jcarousel-skin-tango">
     </ul>
