--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -2,7 +2,8 @@
 {% load static from staticfiles %}
 
 {% block javascript %}
-{{ block.super }}
+    {{ block.super }}
+
     <script type="text/javascript" src="{% static 'js/openseadragon.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script>
     <script src="{% static 'js/search.js' %}"></script>
@@ -25,8 +26,7 @@
         <pre>{{ text|join:" \n\n " |linebreaks }} </pre>
         {% endif %}
     </noscript>
-
-    {% endblock %}
+{% endblock javascript %}
 
 {% block lc_metadata %}
     {% with page as title_metadata %}
@@ -176,7 +176,9 @@
           <span>|</span> <a href="{% url 'chronam_page_jp2' title.lccn issue.date_issued issue.edition page.sequence %}" download="{{ title.lccn }}-{{ issue.date_issued|date:"Ymd" }}.jp2">JP2 ({{ image_size }})</a>
         </span>
         <span class="c-clip">
-             <a id="clip" href="#" target="print"><img src="{% static 'images/item_clip_icon.png' %}" width="18" height="17" alt="Clip Image" /></a>
+             <a id="clip" href="{% url 'chronam_page_print' lccn=title.lccn date=issue.date_issued edition=issue.edition sequence=page.sequence width=page.jp2_width height=page.jp2_length x1=0 y1=0 x2=page.jp2_width y2=page.jp2_length %}" target="print">
+                <img src="{% static 'images/item_clip_icon.png' %}" width="18" height="17" alt="Clip Image" />
+            </a>
         </span>
         {% endif %}
         </div>
