Viewer: cleanly handle pages which have not been digitized
Previously these would leak “None” into the width & height fields and cause OpenSeadragon to choke on invalid values. Since there’s nothing to display in this case, we simply exit cleanly after detecting the problem.

Resolves https://errorlogging.loc.gov/loc/ndnp/issues/1616/

--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -11,8 +11,8 @@
 
     <div id="page_data"
 	    data-static_url="{% static '' %}images/"
-	    data-width="{{ page.jp2_width }}"
-	    data-height="{{ page.jp2_length }}"
+	    data-width="{{ page.jp2_width|default_if_none:'' }}"
+	    data-height="{{ page.jp2_length|default_if_none:'' }}"
 	    data-page_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
 	    data-tile_url="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}"
         data-iiif-url="{% if page.iiif_client %}{{ page.iiif_client.info }}{% endif %}"
