--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>{% load static from staticfiles %}
+{% spaceless %}
+{% load static from staticfiles %}
+{% endspaceless %}<!DOCTYPE html>
 <html lang="en">
   <head profile="http://dublincore.org/documents/2008/08/04/dc-html/">{% block head_content %}
     <meta charset="utf-8">
