--- a/loc/templates/page_print.html
+++ b/loc/templates/page_print.html
@@ -18,7 +18,7 @@
                     <strong>Print this image</strong>
                 </a>
                 |
-                <a class="clip_download" href="{% url 'chronam_page_image_tile' lccn issue.date_issued issue.edition page.sequence width height x1 y1 x2 y2 %}?download=True">
+                <a class="clip_download" download href="{{ download_url }}">
                     <strong>
                         Download this image
                     </strong>
@@ -26,7 +26,7 @@
             </p>
         </div>
         <p>
-            <img src="{% url 'chronam_page_image_tile' lccn issue.date_issued issue.edition page.sequence width height x1 y1 x2 y2 %}" alt="Page" />
+            <img src="{{ image_url }}">
         </p>
         <div id="omni">
             <input type="hidden" id="eVar4" value="{{ image_credit }}" />
