Move third-party JavaScript into vendor directory
This excludes it from our coding standards and normal searches

--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -62,7 +62,7 @@
 
 
 {% block javascript %}{{ block.super }}
-<script type="text/javascript" src="{% static 'js/jquery.tablesorter.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor/jquery.tablesorter.min.js' %}"></script>
 <script type="text/javascript">
     // Customization for tablesorter. Works in conjunction with jquery.tablsorter.min.js
 
