--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -132,7 +132,7 @@
 {% endif %}
 
 {{ block.super }}
-<script src="{% static 'js/jquery-ui.js' %}" ></script>
+<script src="{% static 'vendor/jquery-ui.js' %}" ></script>
 
 <script type="text/javascript">
 jQuery(function ($) {
@@ -159,7 +159,7 @@ jQuery(function ($) {
 });
 </script>
 
-<script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor/jquery.ba-bbq.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 {% block sharetool_javascript %}
