--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -12,7 +12,7 @@
 {% block javascript %}
 {{ block.super }}
 <!-- jCarousel -->
-<script type="text/javascript" src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor/jquery.jcarousel.min.js' %}"></script>
 
 <script type="text/javascript">
 $(document).ready(setupCarousel);
