--- a/example/templates/site.html
+++ b/example/templates/site.html
@@ -109,7 +109,7 @@
 	<li {% if crumb.active %}class="active"{% endif %}><a href="{{crumb.href}}">{{crumb.label}}</a>{% if forloop.last %}{% else %} <span class="divider">/</span>{% endif %}</li>{% endfor %}
       </ul>{% endif %}{% block content %}{% endblock content %}
     </div>{% endblock body_content %}{% block javascript %}
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>{% endblock javascript %}
     <script type="text/javascript">
 (function($) {
