--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -5,7 +5,7 @@
     {{ block.super }}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.1/openseadragon.min.js" integrity="sha256-qIiBj8XqCj196KLyEX8fBJ0HiHUZmXYmYFciVQZ7nls=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/jquery.ba-bbq.min.js' %}"></script>
     <script src="{% static 'js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
