--- a/loc/templates/search_pages_results.html
+++ b/loc/templates/search_pages_results.html
@@ -4,7 +4,7 @@
 
 {% block javascript %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor/jquery.ba-bbq.min.js' %}"></script>
 <script type="text/javascript">
 
 jQuery(function($){
