Add earliest date range for the affected OCR dumps

--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -60,7 +60,7 @@ Please note: Some batches contain digitized newspaper pages that lack correspond
     <b>Update (July 2019):</b>
 
     In early June 2019, an error was identified with the <a href="/data/ocr/">OCR Bulk Data download files</a> available from the <a href="{% url 'chronam_ocr' %}">OCR</a> report.
-    These errors have been corrected but any files downloaded before June 3rd should be replaced with the current versions.
+    These errors have been corrected but any files downloaded between February 5th and June 3rd 2019 should be replaced with the current versions.
     The source OCR data for all newspaper pages currently ingested in Chronicling America are also available at
     <a href="https://chroniclingamerica.loc.gov/data/batches/">https://chroniclingamerica.loc.gov/data/batches/</a>.
 
