--- a/core/templates/reports/batches.xml
+++ b/core/templates/reports/batches.xml
@@ -10,8 +10,8 @@
         <uri>http://loc.gov</uri>
     </author>
     <updated>{{ now }}</updated>
-    {% if page.has_previous %}<link rel="previous" type="application/atom+xml" href="http://{{ request.get_host }}{% url 'chronam_batches_atom_page' page.previous_page_number %}" />{% endif %}
-    {% if page.has_next %}<link rel="next" type="application/atom+xml" href="http://{{ request.get_host }}{% url 'chronam_batches_atom_page' page.next_page_number %}" />{% endif %}
+    {% if page.has_previous %}<link rel="previous" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_batches_atom_page' page.previous_page_number %}" />{% endif %}
+    {% if page.has_next %}<link rel="next" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_batches_atom_page' page.next_page_number %}" />{% endif %}
 
     {% for batch in page.object_list %}
     <entry>
@@ -22,11 +22,10 @@
         <id>info:lc/ndnp/batch/{{batch.name}}</id>
         <author>
             <name>{{batch.awardee.name}}</name>
-            <uri>http://{{ request.get_host }}{% url 'chronam_awardee' batch.awardee.org_code %}</uri>
+            <uri>{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_awardee' batch.awardee.org_code %}</uri>
         </author>
         <updated>{% if batch.released %}{{ batch.released|rfc3339 }}{% else %}{{ batch.created|rfc3339 }}{% endif %}</updated>
     </entry>
     {% endfor %}
 
 </feed>
-
