--- a/core/templates/reports/events.xml
+++ b/core/templates/reports/events.xml
@@ -10,8 +10,8 @@
         <uri>http://loc.gov</uri>
     </author>
     <updated>{{ now }}</updated>
-    {% if page.has_previous %}<link rel="previous" type="application/atom+xml" href="http://{{ request.get_host }}{% url 'chronam_events_atom_page' page.previous_page_number %}" />{% endif %}
-    {% if page.has_next %}<link rel="next" type="application/atom+xml" href="http://{{ request.get_host }}{% url 'chronam_events_atom_page' page.next_page_number %}" />{% endif %}
+    {% if page.has_previous %}<link rel="previous" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_events_atom_page' page.previous_page_number %}" />{% endif %}
+    {% if page.has_next %}<link rel="next" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_events_atom_page' page.next_page_number %}" />{% endif %}
 
     {% for event in page.object_list %}
     <entry>
@@ -25,4 +25,3 @@
     {% endfor %}
 
 </feed>
-
