--- a/core/templates/reports/ocr.xml
+++ b/core/templates/reports/ocr.xml
@@ -2,7 +2,7 @@
 <feed xmlns="http://www.w3.org/2005/Atom">
 
     <title>Chronicling America OCR Data Feed</title>
-    <link rel="self" type="application/atom+xml" href="http://{{ request.get_host }}{% url "chronam_ocr_atom" %}" />
+    <link rel="self" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url "chronam_ocr_atom" %}" />
     <id>info:lc/ndnp/ocr</id>
     <author>
         <name>Library of Congress</name>
@@ -13,10 +13,12 @@
     {% for dump in dumps %}
     <entry>
         <title>{{ dump.name }}</title>
-        <link rel="enclosure" length="{{ dump.size }}" hash="sha1:{{ dump.sha1 }}" type="application/x-bzip2" href="http://{{ request.get_host }}/data/ocr/{{ dump.name }}" />
+        <link rel="enclosure" length="{{ dump.size }}" hash="sha1:{{ dump.sha1 }}" type="application/x-bzip2" href="{{ request.scheme }}://{{ request.get_host }}/data/ocr/{{ dump.name }}" />
         <id>info:lc/ndnp/dump/ocr/{{ dump.name }}</id>
         <updated>{{ dump.created|rfc3339 }}</updated>
-        <summary type="xhtml"><div xmlns="http://www.w3.org/1999/xhtml">OCR dump file <a href="http://{{ request.get_host }}/data/dumps/ocr/{{ dump.name }}">{{ dump.name }}</a> with size {{ dump.size|filesizeformat }} generated {{ dump.created }}</div></summary>
+        <summary type="xhtml">
+            <div xmlns="http://www.w3.org/1999/xhtml">OCR dump file <a href="{{ request.scheme }}://{{ request.get_host }}/data/dumps/ocr/{{ dump.name }}">{{ dump.name }}</a> with size {{ dump.size|filesizeformat }} generated {{ dump.created }}</div>
+        </summary>
     </entry>
     {% endfor %}
 
