--- a/core/templates/title.xml
+++ b/core/templates/title.xml
@@ -2,8 +2,8 @@
 <feed xmlns="http://www.w3.org/2005/Atom">
 
     <title>Chronicling America Title Feed: {{ title }}</title>
-    <link rel="self" type="application/atom+xml" href="http://{{ host }}{% url 'chronam_title_atom' title.lccn %}" />
-    <link rel="alternate" type="text/html" href="http://{{ host }}{% url 'chronam_title' title.lccn %}" />
+    <link rel="self" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_title_atom' title.lccn %}" />
+    <link rel="alternate" type="text/html" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_title' title.lccn %}" />
     <id>info:lc/ndnp/titles/{{ title.lccn }}</id>
     <author>
         <name>Library of Congress</name>
@@ -11,18 +11,18 @@
     </author>
     <updated>{{ feed_updated|rfc3339 }}</updated>
     {% if page.has_previous %}
-    <link rel="previous" type="application/atom+xml" href="http://{{ host }}{% url 'chronam_title_atom_page' title.lccn page.previous_page_number %}" />
+    <link rel="previous" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_title_atom_page' title.lccn page.previous_page_number %}" />
     {% endif %}
     {% if page.has_next %}
-    <link rel="next" type="application/atom+xml" href="http://{{ host }}{% url 'chronam_title_atom_page' title.lccn page.next_page_number %}" />
+    <link rel="next" type="application/atom+xml" href="{{ request.scheme }}://{{ request.get_host }}{% url 'chronam_title_atom_page' title.lccn page.next_page_number %}" />
     {% endif %}
 
     {% for issue in issues %}
     <entry>
         <id>info:lc/ndnp/issue/{{ issue.title.lccn }}/{{ issue.date_issued|date:"Y-m-d"}}</id>
         <title>{{ issue.date_issued }}</title>
-        <link rel="alternate" type="text/html" href="http://{{ host }}{{ issue.url }}" />
-        <link rel="alternate" type="application/rdf+xml" href="http://{{ host }}{{ issue.url }}.rdf" />
+        <link rel="alternate" type="text/html" href="{{ request.scheme }}://{{ request.get_host }}{{ issue.url }}" />
+        <link rel="alternate" type="application/rdf+xml" href="{{ request.scheme }}://{{ request.get_host }}{{ issue.url }}.rdf" />
         <author><name>{{issue.batch.awardee.name}}</name></author>
         <updated>{% if issue.batch.released %}{{ issue.batch.released|rfc3339 }}{% else %}{{ issue.batch.created|rfc3339 }}{% endif %}</updated>
         <summary type="xhtml">
@@ -30,8 +30,8 @@
                 Issue {{ issue.date_issued|date:"Y-m-d" }} of the {{ title.display_name }}
                 <br />
                 {% with issue.first_page as page %}
-                <a href="http://{{ host }}{{ page.url }}">
-                    <img src="http://{{ host }}{{ page.thumb_url }}" />
+                <a href="{{ request.scheme }}://{{ request.get_host }}{{ page.url }}">
+                    <img src="{{ request.scheme }}://{{ request.get_host }}{{ page.thumb_url }}" />
                 </a>
                 {% endwith %}
             </div>
@@ -40,4 +40,3 @@
     {% endfor %}
 
 </feed>
-
