--- a/example/templates/site.html
+++ b/example/templates/site.html
@@ -80,7 +80,7 @@
               <li><a href="{% url chronam_newspapers %}">Newspapers</a></li>
               <li><a href="{% url chronam_about %}">About</a></li>
               <!-- <li><a href="{% url chronam_about_api %}">API</a></li> -->
-              <li><a href="http://loc.gov/">Library of Congress</a></li>
+              <li><a href="https://loc.gov/">Library of Congress</a></li>
               <li><a href="{% url chronam_reports %}">Reports</a></li>
               <li><a href="/help/">Help</a></li>
             </ul>
